--- a/web/style.css
+++ b/web/style.css
@@ -5,6 +5,12 @@ body{
     font-family: sans-serif;
     color: white;
 }
+#stats{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.2);
+}
 #leaderBoard{
     position: fixed;
     top: 0;
