--- a/web/style.css
+++ b/web/style.css
@@ -11,6 +11,16 @@ body{
     left: 0;
     background-color: rgba(0,0,0,0.2);
 }
+.progressBar{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 300px;
+    padding: 5px;
+    background-color: #333;
+    text-align: center;
+}
 #leaderBoard{
     position: fixed;
     top: 0;
