--- a/web/style.css
+++ b/web/style.css
@@ -11,11 +11,12 @@ body{
     left: 0;
     background-color: rgba(0,0,0,0.2);
 }
-.progressBar{
+#progressBar{
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    min-height: 20px;
     min-width: 300px;
     padding: 5px;
     background-color: #333;
