--- a/web/engine/engine.css
+++ b/web/engine/engine.css
@@ -5,6 +5,20 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+#stats div:nth-child(2){
+    position: relative;
+    height: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#stats div:nth-child(2)>div{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 0, 0, 0.8);
+}
+
 #progressBar {
     position: fixed;
     top: 50%;
