--- a/web/ui/ui.css
+++ b/web/ui/ui.css
@@ -74,5 +74,50 @@ h3 {
 }
 
 .selected {
-    background-color: rgb(51, 153, 93) !important;
+    background-color: rgb(133, 212, 166) !important;
+}
+
+.tooltipModalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vw;
+    backdrop-filter: blur(5px);
+}
+
+.tooltipModal {
+    position: fixed;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 3px;
+    box-shadow: 0 0 3px #aaa;
+}
+
+.tooltipScroll {
+    overflow: hidden;
+    border-radius: 3px;
+}
+
+.tooltipContent {
+    max-height: calc(100vh - 40px);
+    max-width: calc(100vw - 40px);
+    overflow: auto;
+}
+
+.tooltipClose {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    padding: 2px 6px;
+    border-radius: 20px;
+    background-color: #eee;
+    box-shadow: 0 0 3px #aaa;
+    cursor: pointer;
+}
+
+.tooltipClose:hover {
+    background-color: rgb(133, 212, 166) !important;
 }
