--- a/web/ui/ui.css
+++ b/web/ui/ui.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400&display=swap');
 body {
-    height: 100vh;
-    width: 100vw;
     margin: 0;
-    font-family: sans-serif;
-    background-color: #ddd;
+    font-family: Orbitron, sans-serif;
+    background-color: rgb(47, 52, 70);
+    color: rgb(38 184 153);
 }
 
 body * {
@@ -12,24 +12,27 @@ body * {
 
 input {
     border: none;
-    border-radius: 3px;
-    box-shadow: inset 0 0 3px #aaa;
-    padding: 3px;
+    padding: 3px 8px;
+    border-radius: 2px;
+    font-family: Orbitron, sans-serif;
+    transition: 0.2s;
+    background-color: rgb(65, 74, 107);
+    color: #fff;
 }
 
 input[type="submit"] {
     cursor: pointer;
+    color: rgb(38 184 153);
 }
 
 textarea:focus, input:focus, input:hover {
     outline: none;
-    box-shadow: inset 0 0 3px rgb(0, 140, 255)
+    box-shadow: none;
+    background-color: rgb(38 184 153);
 }
 
-input[type=submit] {
-    box-shadow: 0 0 3px #aaa;
-    background-color: #fff;
-    padding: 3px;
+input[type="submit"]:hover {
+    color: #fff;
 }
 
 h1 {
@@ -57,24 +60,26 @@ h3 {
     align-items: center;
     padding: 5px;
     transition: 0.2s;
+    background-color: rgb(85, 96, 128);
 }
 
 .list>div:hover {
-    background-color: rgb(133, 212, 166);
+    background-color: rgb(85, 96, 128);
 }
 
 .list>div+div {
-    border-top: 1px solid #ddd;
+    border-top: 2px solid rgb(47, 52, 70);
 }
 
 .list>div>input {
     border: none;
-    border-radius: 3px;
+    border-radius: 2px;
     text-align: center;
 }
 
 .selected {
-    background-color: rgb(133, 212, 166) !important;
+    background-color: rgb(38 184 153) !important;
+    color: #fff !important;
 }
 
 .tooltipModalOverlay {
@@ -91,14 +96,13 @@ h3 {
     top: 50vh;
     left: 50vw;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 3px;
-    box-shadow: 0 0 3px #aaa;
+    background-color: rgb(85, 96, 128);
+    border-radius: 2px;
 }
 
 .tooltipScroll {
     overflow: hidden;
-    border-radius: 3px;
+    border-radius: 2px;
 }
 
 .tooltipContent {
@@ -112,12 +116,13 @@ h3 {
     top: -10px;
     right: -10px;
     padding: 2px 6px;
-    border-radius: 20px;
+    border-radius: 2px;
     background-color: #eee;
-    box-shadow: 0 0 3px #aaa;
     cursor: pointer;
+    transition: 0.4s;
 }
 
 .tooltipClose:hover {
-    background-color: rgb(133, 212, 166) !important;
+    background-color: rgb(38 184 153) !important;
+    color: #fff;
 }
