--- a/web/ui/login/login.css
+++ b/web/ui/login/login.css
@@ -1,5 +1,14 @@
-h1{
+.loginLogo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+body>h1 {
+    position: relative;
     text-align: center;
+    margin-top: 10vh;
 }
 
 .login {
@@ -10,18 +19,18 @@ h1{
     box-sizing: border-box;
     padding: 20px;
     border-radius: 2px;
-    background-color: rgb(85, 96, 128);
-    box-shadow: 0 0 2px #222;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0.9;
 }
 
-.login > h3{
+.login>h3 {
     margin-left: 0;
 }
 
-.login > h3:first-child{
+.login>h3:first-child {
     margin-top: 0;
 }
 
-.login > input[type=submit]{
+.login>input[type=submit] {
     margin-top: 20px;
 }
