--- a/web/ui/ui.css
+++ b/web/ui/ui.css
@@ -31,8 +31,12 @@ textarea:focus, input:focus, input:hover {
     background-color: rgb(38 184 153);
 }
 
-input[type="submit"]:hover, input[type="submit"]:focus {
+input[type="submit"]:hover{
     color: #fff;
+}
+
+input[type="submit"]:focus {
+    background-color: rgb(65, 74, 107);
 }
 
 h1 {
