--- a/web/ui/ui.css
+++ b/web/ui/ui.css
@@ -4,6 +4,7 @@ body {
     font-family: Orbitron, sans-serif;
     background-color: rgb(47, 52, 70);
     color: rgb(38 184 153);
+    overflow: hidden;
 }
 
 body * {
