--- a/web/ui/ingameui/ingameui.css
+++ b/web/ui/ingameui/ingameui.css
@@ -5,3 +5,82 @@
     z-index: 1;
     background-color: rgba(85, 96, 128, 0.9);
 }
+
+#stats {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#stats div:nth-child(2){
+    position: relative;
+    height: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#stats div:nth-child(2)>div{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 0, 0, 0.8);
+}
+
+#progressBar {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75vw;
+    background-color: #333;
+    text-align: center;
+}
+
+#progressBar>div:first-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: aqua;
+}
+
+#progressBar>div:last-child {
+    position: relative;
+    color: #fff;
+}
+
+#leaderBoard {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#leaderBoard>h4 {
+    margin: 0;
+    text-align: center;
+}
+
+#leaderBoard table {
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#leaderBoard tbody {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#leaderBoard td, th {
+    padding: 4px;
+}
+
+#crosshair {
+    position: fixed;
+    height: 3px;
+    width: 3px;
+    top: calc(50% - 1.5px);
+    right: calc(50% - 1.5px);
+    background-color: rgba(255, 0, 0, 0.8);
+}
