--- a/web/ui/ingameui/ingameui.css
+++ b/web/ui/ingameui/ingameui.css
@@ -1,14 +1,14 @@
 .ingamemenu{
     position: fixed;
     width: 100%;
-    height: 2em;
     z-index: 1;
     background-color: rgba(85, 96, 128, 0.9);
+    padding: 10px;
 }
 
 #stats {
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.2);
 }
@@ -52,6 +52,7 @@
 
 #leaderBoard {
     position: fixed;
+    z-index: 2;
     top: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.2);
