--- a/web/ui/login/login.css
+++ b/web/ui/login/login.css
@@ -2,7 +2,8 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) rotate(0deg);
+    transition: 2s;
 }
 
 body>h1 {
