--- a/web/ui/login/login.css
+++ b/web/ui/login/login.css
@@ -2,14 +2,17 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(0deg);
-    transition: 2s;
+    transform: translate(-50%, -50%) rotate(180deg);
+    opacity: 0;
+    transition: 1s;
 }
 
 body>h1 {
     position: relative;
     text-align: center;
     margin-top: 10vh;
+    opacity: 0;
+    transition: 1s;
 }
 
 .login {
@@ -22,6 +25,8 @@ body>h1 {
     border-radius: 2px;
     background-color: rgba(0, 0, 0, 0.7);
     opacity: 0.9;
+    opacity: 0;
+    transition: 1s;
 }
 
 .login>h3 {
