--- a/web/ui/ingameui/ingameui.css
+++ b/web/ui/ingameui/ingameui.css
@@ -1,33 +1,22 @@
-.ingamemenu{
-    position: fixed;
+.ingamemenu {
+    position: absolute;
+    top: 0;
     width: 100%;
     z-index: 1;
-    background-color: rgba(85, 96, 128, 0.9);
-    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 5px;
+    opacity: 0;
+    transition: 0.2s;
 }
 
-#stats {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-#stats div:nth-child(2){
-    position: relative;
-    height: 20px;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-#stats div:nth-child(2)>div{
-    position: absolute;
+body>canvas {
+    width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 0, 0, 0.8);
+    opacity: 0;
+    transition: 0.2s;
 }
 
-#progressBar {
+.progressBar {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -37,20 +26,27 @@
     text-align: center;
 }
 
-#progressBar>div:first-child {
+.progressBar>div:first-child {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    background-color: aqua;
+    background-color: rgb(38, 184, 153);
 }
 
-#progressBar>div:last-child {
+.progressBar>div:last-child {
     position: relative;
     color: #fff;
 }
 
-#leaderBoard {
+.hud {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    opacity: 0;
+}
+
+.hud>.leaderBoard {
     position: fixed;
     z-index: 2;
     top: 0;
@@ -58,30 +54,51 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-#leaderBoard>h4 {
+.stats {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.stats div:nth-child(2) {
+    position: relative;
+    height: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.stats div:nth-child(2)>div {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 0, 0, 0.8);
+}
+
+.leaderBoard>h4 {
     margin: 0;
     text-align: center;
 }
 
-#leaderBoard table {
+.leaderBoard table {
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
 }
 
-#leaderBoard tbody {
+.leaderBoard tbody {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-#leaderBoard td, th {
+.leaderBoard td, th {
     padding: 4px;
 }
 
-#crosshair {
+.crosshair {
     position: fixed;
     height: 3px;
     width: 3px;
     top: calc(50% - 1.5px);
     right: calc(50% - 1.5px);
-    background-color: rgba(255, 0, 0, 0.8);
+    background-color: rgba(0, 255, 200, 0.7);
 }
